2006-09-02  Roman Kennke  <kennke@aicas.com>

	PR 28928
	* javax/swing/plaf/basic/BasicTextUI.java
	(RootView.getPreferredSpan): Default to 10 when there is no
	real view.
	(RootView.getMinimumSpan): Forward to view and default to 10
	when there is no real view.
	(RootView.getMaximumSpan): Return Integer.MAX_VALUE.
	(getMaximumSize): Check for overflow.
	* javax/swing/text/FieldView.java
	(getResizeWeight): Removed unneeded assignment.

2006-09-01  Francis Kung  <fkung@redhat.com>
	* java/awt/image/ColorConvertOp.java
	(copyImage): Updated javadoc and comments.
	(copyRaster): Add javadoc.
	(createCompatibleColorModel): Add javadocs and comments.
	(createCompatibleDestImage): Use correct transfer type.
	(createCompatibleDestRaster): Add new parameter for transfer type.
	(filter): Use correct transfer type.
	* java/awt/image/ConvolveOp.java: Updated javadocs.
	(createCompatibleDestImage): Set new image properties correctly.
	(filter(BufferedImage, BufferedImage): Correct handling of premultiplication.
	(filter(WritableRaster, Raster): Clip sample values to [0-255].

2006-09-01  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/table/DefaultTableModel.java:
	(checkSize): Added null check for dataVector.

2006-09-01  Robert Schuster  <robertschuster@fsfe.org>

        * javax/swing/plaf/basic/BasicSplitPaneUI.java:
        (BasicHorizontalLayout.getAlignmentX): Return fixed value.
        (BasicHorizontalLayout.getAlignmentY): Return fixed value.

2006-09-01  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/plaf/metal/MetalCheckBoxIcon.java:
	(paintIcon): Removed unused import statements, lowered cast requirement
	from JCheckBox to AbstractButton.

2006-09-01  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/plaf/basic/BasicLookAndFeel.java:
	(initComponentDefaults): Added, changed and removed some
	tabbed pane properties.

2006-09-01  Robert Schuster  <robertschuster@fsfe.org>

	* examples/gnu/classpath/examples/swing/TabbedPaneDemo.java: