@@ -2445,8 +2445,10 @@ public class HTML_401F
         attr(VALUE, null, null, 0, IMPLIED)
       }
     );
+      
+      // Headers in the paragraph are not allowed.
       defElement(P, 0, false, true, new ContentModel( 0,
-       new noTagModel(P), null),
+       new noTagModel(new String[] { P, H1, H2, H3, H4, H5, H6 }), null),
       NONE
       ,
       new String[] {
